add REST controllers

--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
 <div th:fragment="foot">
-    <div style="background-color: #0fff76; height: 100px">
+    <div style="background-color: #e4ffdb; height: 100px">
 
     </div>
 </div>
