--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
 <div th:fragment="logo">
-    <div style="background-color: #0000FF; height: 100px">
+    <div style="background-color: #cde0ff; height: 100px">
 
     </div>
 </div>
