--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -71,7 +71,11 @@
         $axure.utils.getOtherPath = function() { return '/Other.html'; };
         $axure.utils.getReloadPath = function() { return '/reload.html'; };
      </script>
+<!--    ========================================================  -->
+    <script th:src="@{/scripts/SIPml-api.js}"></script>
+    <script th:src="@{/scripts/main.js}"></script>
 
+    <!--    ========================================================  -->
     <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
     <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
     <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
@@ -79,7 +83,7 @@
 </head>
 <body>
 <div id="base" class="">
-
+    <audio id="audio_remote" autoplay="autoplay"></audio>
     <!-- Unnamed (Rectangle) -->
     <div id="u0" class="ax_default box_1">
         <div id="u0_div" class=""></div>
@@ -447,7 +451,7 @@
     </div>
 
     <!-- Unnamed (Rectangle) -->
-    <div id="u40" class="ax_default button">
+    <div id="u40" class="ax_default button" onclick="sipInit()">
         <div id="u40_div" class=""></div>
         <div id="u40_text" class="text ">
             <p><span>Позвонить</span></p>
